--- a/web-qr-reaction-app/src/App.css
+++ b/web-qr-reaction-app/src/App.css
@@ -1,3 +1,6 @@
+/*
+
+commented out the default code incase we need it for later
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -40,3 +43,4 @@
 .read-the-docs {
   color: #888;
 }
+*/
