done creating the Flash card component

--- a/web-qr-reaction-app/src/App.css
+++ b/web-qr-reaction-app/src/App.css
@@ -4,15 +4,15 @@
 body{
     
 }
-.card{
-    background: hsl(0, 0%, 100%);
+.card {
+    background: dodgerBlue;
     margin: 0em 1em 0em 1em;
     padding: 1.2em;
     border: solid 1px hsl(0, 0%, 7%);
     border-radius: 20px;
-    box-shadow: 12px 12px 10px -6px rgba(0,0,0,1);
-
+    box-shadow: 12px 12px 10px -6px rgba(0, 0, 0, 1);
 }
+
 .img-head img{
     width: 100%;
 }
@@ -33,7 +33,7 @@ body{
     font-weight: 800;
 }
 .descr{
-    color: hsl(0, 0%, 42%);
+    color: black;
     font-weight: 500;
 }
 .author{
