--- a/web-qr-reaction-app/src/App.css
+++ b/web-qr-reaction-app/src/App.css
@@ -4,6 +4,24 @@
 body{
     
 }
+
+.container {
+    position: relative;
+    border: 2px solid #333;
+    margin: 50px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.outerContainer {
+    width:auto;
+    height:auto;
+    justify-content: center;
+    align-items: center;
+}
+
+
 .card {
     background: dodgerBlue;
     margin: 0em 1em 0em 1em;
